@@ -29,6 +29,10 @@
 
 #if HAVE_LIBREADLINE || HAVE_LIBEDIT
 
+#ifndef HAVE_RL_COMPLETION_MATCHES
+#define rl_completion_matches completion_matches
+#endif
+
 #include <readline/readline.h>
 #ifndef HAVE_LIBEDIT
 #include <readline/history.h>
@@ -421,7 +425,7 @@ static char **_readline_completion_cb(const char *text, int start, int end)
 	if (call_user_function(CG(function_table), NULL, _readline_completion, &_readline_array, 3, params TSRMLS_CC) == SUCCESS) {
 		if (Z_TYPE(_readline_array) == IS_ARRAY) {
 			if (zend_hash_num_elements(Z_ARRVAL(_readline_array))) {
-				matches = completion_matches(text,_readline_command_generator);
+				matches = rl_completion_matches(text,_readline_command_generator);
 			} else {
 				matches = malloc(sizeof(char *) * 2);
 				matches[0] = strdup("");
